--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "openmeteo": "^1.1.4",
     "vue": "^3.5.12"
   },
   "devDependencies": {
