--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "openmeteo": "^1.1.4",
-    "vue": "^3.5.12"
+    "chart.js": "^4.4.6",
+    "ky": "^1.7.2",
+    "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
